--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@graphql-tools/load": "^7.5.10",
     "apollo-datasource-rest": "^3.5.2",
     "apollo-server": "^3.6.7",
-    "graphql": "^16.4.0",
-    "imjs": "^4.0.0"
+    "graphql": "^16.4.0"
   }
 }
