--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "nodemon src/index.js",
+    "start:ci": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +15,8 @@
     "@graphql-tools/load": "^7.5.10",
     "apollo-datasource-rest": "^3.5.2",
     "apollo-server": "^3.6.7",
-    "graphql": "^16.4.0"
+    "graphql": "^16.4.0",
+    "nodemon": "^2.0.16",
+    "dotenv": "^16.0.0"
   }
 }
