Added noImplicitReturns to TypeScript config.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "esnext",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "noImplicitReturns": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "types": ["node"]
