Added noImplicitOverride to TypeScript config.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "noImplicitOverride": true,
     "types": ["node"]
   }
 }
