--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@apollo/server": "^4.3.2",
     "@graphql-tools/load-files": "^6.6.1",
     "@graphql-tools/merge": "^8.3.17",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0"
   },
   "devDependencies": {
