--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,7 +1,7 @@
 services:
   graphql-server:
     build: .
-    command: serve:dev
+    command: start
     healthcheck:
       disable: true
     volumes:
