--- a/compose.yml
+++ b/compose.yml
@@ -3,5 +3,5 @@ services:
     ports:
       - "${PORT:-4000}:4000"
     environment:
-      - INTERMINE_URI="${INTERMINE_URI}"
-      - MICROSERVICES_URI="${MICROSERVICES_URI}"
+      - INTERMINE_URI=${INTERMINE_URI}
+      - MICROSERVICES_URI=${MICROSERVICES_URI}
