--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@legumeinfo/graphql-server",
   "version": "1.1.0",
-  "description": "",
+  "description": "A GraphQL server that supports the Legume Information System and related biodata websites",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
