add back the command: start to the compose.dev.yml file, fixing #164 but @acleary take note that in order to get this to work I had to remove the use of build:watch which I haven't been able to figure out how to make work with bun

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build:watch": "tsc-watch",
     "clean": "rm -rf ./dist",
     "serve": "node ./dist/index.js",
-    "serve:dev": "NODE_ENV=development npm run build:watch -- --onSuccess \"npm run serve\"",
-    "serve:prod": "NODE_ENV=production npm run serve",
-    "start": "npm run clean && npm run build && npm run serve:dev"
+    "serve:dev": "NODE_ENV=development bun run build:watch -- --onSuccess \"bun run serve\"",
+    "serve:prod": "NODE_ENV=production bun run serve",
+    "start": "bun run clean && bun run build && bun run serve"
   },
   "keywords": [],
   "author": "Legume Information System",
