--- a/.github/workflows/eslint-prettier-on-pr.yml
+++ b/.github/workflows/eslint-prettier-on-pr.yml
@@ -15,15 +15,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
-      # Setup npm environment to run tests
-      - uses: actions/setup-node@v3
+      # Setup bun environment to run tests
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: '22.x'
-          registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
-      - run: npm run lint:eslint-config-prettier
-      - run: npm run format
-      - run: npm run lint
+          bun-version: 'latest'
+      - run: bun install --frozen-lockfile # equivalent to npm ci
+      - run: bun run lint:eslint-config-prettier
+      - run: bun run format
+      - run: bun run lint
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Apply prettier formatting changes and check with eslint
