--- a/package.json
+++ b/package.json
@@ -1,33 +1,8 @@
 {
   "name": "@legumeinfo/graphql-server",
   "version": "1.7.1",
-  "description": "A GraphQL server that supports the Legume Information System and related biodata websites",
-  "main": "dist/index.js",
-  "type": "module",
-  "scripts": {
-    "build": "tsc && cp ./src/types/*.graphql ./dist/types",
-    "build:watch": "tsc-watch",
-    "clean": "rm -rf ./dist",
-    "lint": "npm run lint:eslint",
-    "lint:eslint": "eslint src/*.ts src/**/*.ts",
-    "lint:eslint-config-prettier": "eslint-config-prettier src/*.ts src/**/*.ts",
-    "format": "prettier src/*.ts src/**/*.ts --write",
-    "serve": "bun run ./dist/index.js",
-    "serve:dev": "NODE_ENV=development bun run tsc-watch --onSuccess \"bun run serve\"",
-    "serve:prod": "NODE_ENV=production bun run serve",
-    "start": "bun run clean && bun run build && bun run serve",
-    "postinstall": "husky"
-  },
-  "keywords": [
-    "typescript",
-    "graphql",
-    "apollo",
-    "legumes",
-    "agbio",
-    "biology"
-  ],
   "author": "Legume Information System",
-  "license": "Apache-2.0",
+  "main": "dist/index.js",
   "dependencies": {
     "@apollo/datasource-rest": "^6.4.1",
     "@apollo/server": "^4.12.0",
@@ -43,9 +18,32 @@
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
     "tsc-watch": "^6.2.1",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.0"
   },
-  "devDependencies": {
-    "typescript": "^5.6.3"
-  }
+  "description": "A GraphQL server that supports the Legume Information System and related biodata websites",
+  "keywords": [
+    "typescript",
+    "graphql",
+    "apollo",
+    "legumes",
+    "agbio",
+    "biology"
+  ],
+  "license": "Apache-2.0",
+  "scripts": {
+    "build": "tsc && cp ./src/types/*.graphql ./dist/types",
+    "build:watch": "tsc-watch",
+    "clean": "rm -rf ./dist",
+    "lint": "npm run lint:eslint",
+    "lint:eslint": "eslint src/*.ts src/**/*.ts",
+    "lint:eslint-config-prettier": "eslint-config-prettier src/*.ts src/**/*.ts",
+    "format": "prettier src/*.ts src/**/*.ts --write",
+    "serve": "bun run ./dist/index.js",
+    "serve:dev": "NODE_ENV=development bun run tsc-watch --onSuccess \"bun run serve\"",
+    "serve:prod": "NODE_ENV=production bun run serve",
+    "start": "bun run clean && bun run build && bun run serve",
+    "postinstall": "husky"
+  },
+  "type": "module"
 }
