Fixed glob bug in package.json
Specifically, globs weren't in quotes so when scripts were run as sub-scripts the globs weren't parsed corrently.

--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "build": "tsc && cp ./src/types/*.graphql ./dist/types",
     "build:watch": "tsc-watch",
     "clean": "rm -rf ./dist",
-    "lint": "npm run lint:eslint",
-    "lint:eslint": "eslint src/*.ts src/**/*.ts",
-    "lint:eslint-config-prettier": "eslint-config-prettier src/*.ts src/**/*.ts",
-    "format": "prettier src/*.ts src/**/*.ts --write",
+    "lint": "bun run lint:eslint",
+    "lint:eslint": "eslint \"src/*.ts\" \"src/**/*.ts\"",
+    "lint:eslint-config-prettier": "eslint-config-prettier \"src/*.ts\" \"src/**/*.ts\"",
+    "format": "prettier \"src/*.ts\" \"src/**/*.ts\" --write",
     "serve": "bun run ./dist/index.js",
     "serve:dev": "NODE_ENV=development bun run tsc-watch --onSuccess \"bun run serve\"",
     "serve:prod": "NODE_ENV=production bun run serve",
